--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tailwindcss/vite": "^4.1.18",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
@@ -24,6 +26,7 @@
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "three": "^0.182.0",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "@types/node": "^25.2.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^10.0.0",
     "eslint-config-prettier": "^10.1.8",
