--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,4 +7,57 @@ on:
       - 'v*'
 
 jobs:
-  - desktop-build:
+  publish-app:
+    permissions:
+      contents: write
+    runs-on: windows-latest
+    steps:
+        - name: Checkout code
+          uses: actions/checkout@v2
+
+        - name:  Install Rust stable
+          uses: dtolnay/rust-toolchain@stable
+          with:
+            targets: x86_64-pc-windows-msvc
+
+        #  Cargo use all CPU to build => use large RAM
+        - name: Rust Cache
+          uses: swatinem/rust-cache@v2
+          with:
+            workspaces: "src-tauri -> target"
+
+        - name: Setup Bun
+          uses: bunjs/setup-bun@v1
+
+        - name: Install Dependencies
+          run: bun install
+
+        - name: Build
+          uses: tauri-apps/tauri-action@v0
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+            TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+
+          with:
+              tagName: v__VERSION__
+              releaseName: "Vina UAV v__VERSION__"
+              releaseBody: |
+                          ## VinaUAV Windows Release
+                          See the assets below to download and install this version.
+
+                          ## Installation
+                          - **Windows**: Download the `.msi` or `.exe` installer
+
+                          The app includes automatic updates - future updates will be installed automatically.
+
+              releaseDraft: true
+              prerelease: false
+              args: "--bundle nsis,msi"
+              includeUpdaterJson: true
+
+        - name: Upload Artifacts
+          uses: actions/upload-artifact@v4
+          with:
+              name: VinaUAV-Windows-Build
+              path: src-tauri/target/release/bundle/
