--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,6 +35,14 @@ jobs:
         - name: Install Dependencies
           run: bun install
 
+        - name: Clean pnpm lockfile
+          shell: pwsh
+          run: |
+                  if (Test-Path "pnpm-lock.yaml") {
+                    Remove-Item "pnpm-lock.yaml" -Force
+                    Write-Host "Deleted pnpm-lock.yaml to enforce Bun runner."
+                  }
+
         - name: Build
           uses: tauri-apps/tauri-action@v0
           env:
